--- a/style.css
+++ b/style.css
@@ -396,7 +396,7 @@ html {
         
             font-size: 2.5rem;
             color: #777;
-            padding-top: 0.1vh;
+            padding-top: 58.1vh;
             margin-top: 0.1vh;
            
         }
@@ -484,8 +484,9 @@ html {
         
             font-size: 2.5rem;
             color: #777;
-            padding-top: 0.1vh;
+            padding-top: 184.1vh;
             margin-top: 0.1vh;
+            min-height: 3vh;
            
         }
 
@@ -493,56 +494,7 @@ html {
 
 }
 
-/* WEB VERSION  WINDOW NARROW FROM TOP to BOTTOM 5 */
-    @media screen and (width <= 820px) and (height <= 171px) {
 
-        .nav ul {
-            margin: 0;
-            font-size: 1.6rem;
-            position: fixed;
-            max-width: 21%;
-            display: flex;
-            flex-direction: column;
-            margin-left: -1.8vw;
-            flex-wrap: wrap;
-            overflow-wrap: break-word;
-            margin-top: 7vh;
-        
-           
-        }
-        
-        .nav a {
-            padding-bottom: 1.rem;
-            padding-left: 1.6rem;
-            display: inline-block;
-            text-decoration: none;
-            
-        }
-        
-            .overflow_box_hide{
-        
-                display:none;
-        
-            }
-        
-            .content-section{
-                margin-top: -1vh;
-                font-size: 2.5rem;
-                color: #777;
-            }
-            
-            .content-section1{
-            
-                font-size: 2.5rem;
-                color: #777;
-                padding-top: 0.1vh;
-                margin-top: 0.1vh;
-               
-            }
-    
-            
-    
-    }
 
 /* WEB VERSION  WINDOW NARROW FROM TOP to BOTTOM 2 MOST SHORT */
 @media screen and (449px <= width) and (height <= 171px) {
@@ -587,6 +539,56 @@ html {
 
 }
 
+/* WEB VERSION  WINDOW NARROW FROM TOP to BOTTOM 5 */
+@media screen and (width <= 820px) and (height <= 171px) {
+
+    .nav ul {
+        margin: 0;
+        font-size: 1.6rem;
+        position: fixed;
+        max-width: 21%;
+        display: flex;
+        flex-direction: column;
+        margin-left: -1.8vw;
+        flex-wrap: wrap;
+        overflow-wrap: break-word;
+        margin-top: 7vh;
+    
+       
+    }
+    
+    .nav a {
+        padding-bottom: 1.rem;
+        padding-left: 1.6rem;
+        display: inline-block;
+        text-decoration: none;
+        
+    }
+    
+        .overflow_box_hide{
+    
+            display:none;
+    
+        }
+    
+        .content-section{
+            margin-top: -1vh;
+            font-size: 2.5rem;
+            color: #777;
+        }
+        
+        .content-section1{
+        
+            font-size: 2.5rem;
+            color: #777;
+            padding-top: 0.1vh;
+            margin-top: 0.1vh;
+           
+        }
+
+        
+
+}
 
 
 
