--- a/style.css
+++ b/style.css
@@ -484,11 +484,21 @@ html {
         
             font-size: 2.5rem;
             color: #777;
-            padding-top: 184.1vh;
+            padding-top: 2.1vh;
             margin-top: 0.1vh;
             min-height: 3vh;
            
         }
+
+        .link_event_promo{
+            width: 5vw;
+            height: 3vh;
+            margin-top: 249vh;
+    
+        }
+           
+        
+        
 
         
 
