--- a/tile.css
+++ b/tile.css
@@ -4,6 +4,20 @@
 
 }
 
+
+.tile-content {
+    line-height: 1.5;
+    font-size: 0.9rem;
+    padding-left: 0.5vw;
+    padding-right: 1vw;
+    padding-top: 1vw;
+    padding-bottom: 1vw;
+    overflow: hidden;
+    max-width: 100%;
+    max-height: 20rem;
+
+}
+
 /* Mobile VERSION */
 
 
@@ -392,7 +406,14 @@
         height: 18vh;
         object-fit: cover;
         display: block;
+        margin-bottom: 10vh;
     
+    }
+    
+    .tile-single{
+        margin-top: 20vh;
+        margin-bottom: 20vh;
+      
     }
 
 
@@ -496,6 +517,7 @@
         height: 18vh;
         object-fit: cover;
         display: block;
+        margin-bottom: 10vh;
     
     }
 
@@ -509,6 +531,126 @@
 
 
 }
+
+/* WEB VERSION  WINDOW NARROW FROM TOP to BOTTOM 7 */
+@media screen and (width <= 509px) and (height <= 280px)  {
+
+    .tile-group {
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(14.36vw, 1fr));
+        grid-auto-rows: auto;
+        gap: 1vw;
+        font-family: sans-serif;
+        margin-bottom: 1000vh;
+        margin-left: 0.1vw;
+        max-width: 75vw;
+        display: grid;
+        gap: 2vw;
+        padding-bottom: 48vh;
+        transform-origin: left top;
+        transform: scale(1.4);
+      
+     
+        
+    
+    
+    }
+
+    .flex-container {
+        display: flex;
+        flex-direction: column;
+        flex-direction: flex-start;
+        margin: 0 auto;
+        padding: 0vw 45.9vw;
+
+    }
+
+    .tile-group * {
+        box-sizing: border-box;
+    
+    
+    }
+    
+    
+    .tile-image {
+        max-width: 100%;
+        height: 18vh;
+        object-fit: cover;
+        display: block;
+    
+    }
+
+   
+
+    .tile-single {
+        margin-bottom: 35vh;
+    
+    }
+    
+
+
+}
+
+/* WEB VERSION  WINDOW NARROW FROM TOP to BOTTOM 8 */
+@media screen and (width <= 388px) and (height <= 175px) {
+
+    .tile-group {
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(14.36vw, 1fr));
+        grid-auto-rows: auto;
+        gap: 1vw;
+        font-family: sans-serif;
+        margin-bottom: 1000vh;
+        margin-left: 0.1vw;
+        max-width: 75vw;
+        display: grid;
+        gap: 2vw;
+        padding-bottom: 48vh;
+        transform-origin: left top;
+        transform: scale(1.4);
+      
+     
+        
+    
+    
+    }
+
+    .flex-container {
+        display: flex;
+        flex-direction: column;
+        flex-direction: flex-start;
+        margin: 0 auto;
+        padding: 0vw 45.9vw;
+
+    }
+
+    .tile-group * {
+        box-sizing: border-box;
+    
+    
+    }
+    
+    
+    .tile-image {
+        max-width: 100%;
+        height: 18vh;
+        object-fit: cover;
+        display: block;
+    
+    }
+
+   
+
+    .tile-single {
+        margin-bottom: 150vh;
+        margin-top: 150vh;
+    
+    }
+    
+
+
+}
+
 
 
 
@@ -627,18 +769,6 @@
 
 
 
-.tile-content {
-    line-height: 1.5;
-    font-size: 0.9rem;
-    padding-left: 0.5vw;
-    padding-right: 1vw;
-    padding-top: 1vw;
-    padding-bottom: 1vw;
-    overflow: hidden;
-    max-width: 100%;
-    max-height: 20rem;
-
-}
 
 .tile-content>p:first-of-type {
     margin-top: 0;
