--- a/style.css
+++ b/style.css
@@ -630,8 +630,8 @@ html {
 }
 
 
-/* WEB VERSION  WINDOW NARROW FROM TOP to BOTTOM 7 */
-@media screen and (width <= 388px) and (height <= 175px) {
+/* WEB VERSION  WINDOW NARROW FROM TOP to BOTTOM 8 */
+@media screen and (width <= 318px) and (height <= 175px) {
 
     .nav ul {
         margin: 0;
@@ -646,6 +646,66 @@ html {
         margin-top: 7vh;
         transform-origin: left top;
         transform: scale(0.6);
+    
+       
+    }
+    
+    
+        .overflow_box_hide{
+    
+            display:none;
+    
+        }
+    
+        .content-section{
+            margin-top: -1vh;
+            font-size: 2.5rem;
+            color: #777;
+        }
+        
+        .content-section1{
+        
+            font-size: 2.5rem;
+            color: #777;
+            padding-top: 100.1vh;
+            margin-top: 1000vh;
+            min-height: 3vh;
+            padding-bottom: 5vh;
+           
+        }
+
+        .link_event_promo{
+            width: 5vw;
+            height: 5vh;
+            margin-top: 4000vh;
+        
+
+    
+        }
+           
+        
+        
+
+        
+
+}
+
+/* WEB VERSION  WINDOW NARROW FROM TOP to BOTTOM 9 */
+@media screen and (width <= 320px) and (height <= 145px) {
+
+    .nav ul {
+        margin: 0;
+        font-size: 1.6rem;
+        position: fixed;
+        max-width: 21%;
+        display: flex;
+        flex-direction: column;
+        margin-left: 0.1vw;
+        flex-wrap: wrap;
+        overflow-wrap: break-word;
+        margin-top: 7vh;
+        transform-origin: left top;
+        transform: scale(0.4);
     
        
     }
