--- a/tile.css
+++ b/tile.css
@@ -651,7 +651,65 @@
 
 }
 
+/* WEB VERSION  WINDOW NARROW FROM TOP to BOTTOM 9 */
+@media screen and (width <= 320px) and (height <= 145px) {
 
+    .tile-group {
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(14.36vw, 1fr));
+        grid-auto-rows: auto;
+        gap: 1vw;
+        font-family: sans-serif;
+        margin-bottom: 1000vh;
+        margin-left: 0.1vw;
+        max-width: 75vw;
+        display: grid;
+        gap: 2vw;
+        padding-bottom: 48vh;
+        transform-origin: left top;
+        transform: scale(1.4);
+      
+     
+        
+    
+    
+    }
+
+    .flex-container {
+        display: flex;
+        flex-direction: column;
+        flex-direction: flex-start;
+        margin: 0 auto;
+        padding: 0vw 45.9vw;
+
+    }
+
+    .tile-group * {
+        box-sizing: border-box;
+    
+    
+    }
+    
+    
+    .tile-image {
+        max-width: 100%;
+        height: 18vh;
+        object-fit: cover;
+        display: block;
+    
+    }
+
+   
+
+    .tile-single {
+        margin-bottom: 350vh;
+        margin-top: 350vh;
+    
+    }
+    
+
+
+}
 
 
 
