--- a/style.css
+++ b/style.css
@@ -473,6 +473,8 @@ html {
         flex-wrap: wrap;
         overflow-wrap: break-word;
         margin-top: 7vh;
+        transform-origin: left top;
+        transform: scale(0.7);
     
        
     }
@@ -503,7 +505,7 @@ html {
         .link_event_promo{
             width: 5vw;
             height: 3vh;
-            margin-top: 289vh;
+            margin-top: 389vh;
     
         }
            
@@ -765,6 +767,7 @@ html {
         overflow-wrap: break-word;
         margin-top: 7vh;
     
+    
        
     }
     
@@ -799,6 +802,7 @@ html {
 
     
         }
+
               
 
         
@@ -862,6 +866,9 @@ html {
         flex-wrap: wrap;
         overflow-wrap: break-word;
         margin-top: 7vh;
+        transform-origin: left top;
+        transform: scale(0.5);
+    
     
        
     }
@@ -895,6 +902,13 @@ html {
            
         }
 
+        .link_event_promo{
+            width: 5vw;
+            height: 3vh;
+            margin-top: 380vh;
+
+    
+        }
         
 
 }
