--- a/style.css
+++ b/style.css
@@ -192,6 +192,49 @@ html {
     }
 }
 
+/* WEB VERSION LARGE 2 */
+
+@media screen and (4000px <= width) and (height >= 501px){
+
+    .nav ul {
+    margin: 0;
+    font-size: 1.6rem;
+    position: fixed;
+    max-width: 21%;
+    display: flex;
+    flex-direction: column;
+    margin-left: -1.5vw;
+    flex-wrap: wrap;
+    overflow-wrap: break-word;
+    transform-origin: left top;
+    transform: scale(2.5);
+
+   
+}
+
+
+    .overflow_box_hide{
+
+        display:none;
+
+    }
+
+    .content-section{
+        margin-top: -1vh;
+        font-size: 2.5rem;
+        color: #777;
+    }
+    
+    .content-section1{
+    
+        font-size: 2.5rem;
+        color: #777;
+        padding-top: var(--margin_top);
+        margin-top: 1vh;
+       
+    }
+}
+
 /* WEB VERSION  WINDOW NARROW FROM RIGHT to LEFT 1*/
 @media screen and (968px <= width) and (height >= 501px){
 
